--- a/ui/package.json
+++ b/ui/package.json
@@ -12,6 +12,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "aws s3 cp ./build  s3://table-tennis-myob-score/ --recursive --grants read=uri=http://acs.amazonaws.com/groups/global/AllUsers"
   }
 }
