--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "deploy": "aws s3 cp ./build  s3://table-tennis-myob-score/ --recursive --grants read=uri=http://acs.amazonaws.com/groups/global/AllUsers"
+    "deploy": "npm run build; aws s3 cp ./build  s3://table-tennis-myob-score/ --recursive --grants read=uri=http://acs.amazonaws.com/groups/global/AllUsers"
   }
 }
